[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/VanHunter/cars/bluebro.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bodyCar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/prgHealth.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/VanHunter/cars/car.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 18.125 )

[node name="bodyCarPlayer" type="KinematicBody2D" groups=[
"player",
]]
show_behind_parent = true
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="partDirt" type="CPUParticles2D" parent="."]
position = Vector2( 0, 15 )
amount = 24
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 125.0
scale_amount = 16.0
scale_amount_random = 0.5
color = Color( 0.372549, 0.341176, 0.341176, 1 )

[node name="sprCar" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="sprBro" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="timerAttack" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="prgHealth" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -12.875
margin_top = -22.875
margin_right = 13.125
margin_bottom = -18.875
mouse_filter = 2

[node name="shapeCar" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="timeout" from="timerAttack" to="." method="_on_timerAttack_timeout"]
